#36797: Fixed wrong indentation style